@@ -3,6 +3,7 @@ amaroK ChangeLog
 (c) 2002-2004 the amaroK authors.
 
 
+  FIX: CollectionBrowser does not sort by tracknumber (BR 79600).
   FIX: ContextBrowser's URLRequests need to be escaped.
   FIX: Always show OSD (if enabled) on volume changes.
   FIX: Filtering the collection using tokens with number(s) at the beginning
